--- a/charts/ontrack/templates/deployment.yaml
+++ b/charts/ontrack/templates/deployment.yaml
@@ -137,6 +137,7 @@ spec:
             - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI
               value: http://keycloak:{{ .Values.auth.keycloak.service.port }}/realms/{{ .Values.auth.keycloak.realm }}
             {{- end }}
+            {{- end }}
             ########################################
             # Metrics tags
             ########################################
