--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -232,6 +232,7 @@ auth:
     resources: {}
     realm: ontrack
     settings:
+      enabled: true
       registrationAllowed: true
       resetPasswordAllowed: true
       admin:
