--- a/charts/ontrack/templates/keycloak-configmap.yaml
+++ b/charts/ontrack/templates/keycloak-configmap.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.auth.keycloak.enabled (not .Values.auth.keycloak.external.enabled) }}
+{{- if and .Values.auth.keycloak.enabled (not .Values.auth.keycloak.external.enabled) .Values.auth.keycloak.settings.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
