--- a/charts/ontrack/templates/keycloak-service.yaml
+++ b/charts/ontrack/templates/keycloak-service.yaml
@@ -13,7 +13,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.auth.keycloak.service.port }}
-      targetPort: 8080
+      targetPort: {{ .Values.auth.keycloak.service.port }}
       protocol: TCP
       name: http
   selector:
