--- a/charts/ontrack/templates/keycloak-deployment.yaml
+++ b/charts/ontrack/templates/keycloak-deployment.yaml
@@ -58,12 +58,30 @@ spec:
               value: "/{{ .Values.auth.keycloak.service.path }}"
             - name: KC_HOSTNAME_DEBUG
               value: "{{ .Values.auth.keycloak.service.debug }}"
+            - name: KC_HEALTH_ENABLED
+              value: "true"
           ports:
             - name: http
               containerPort: 8080
               protocol: TCP
+            - name: health
+              containerPort: 9000
+              protocol: TCP
           resources: {{ toYaml .Values.auth.keycloak.resources | nindent 12 }}
-          # TODO Probes
+          livenessProbe:
+            httpGet:
+              path: "/{{ .Values.auth.keycloak.service.path }}/health/live"
+              port: 9000
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            failureThreshold: 6
+          readinessProbe:
+            httpGet:
+              path: "/{{ .Values.auth.keycloak.service.path }}/health/ready"
+              port: 9000
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            failureThreshold: 6
       {{- if .Values.auth.keycloak.settings.enabled }}
       volumes:
         - name: {{ include "ontrack.fullname" . }}-keycloak-settings
