--- a/charts/ontrack/templates/deployment-ui.yaml
+++ b/charts/ontrack/templates/deployment-ui.yaml
@@ -49,6 +49,10 @@ spec:
             - name: NEXTAUTH_ISSUER
               value: {{ .Values.ontrack.url }}/{{ .Values.auth.keycloak.service.path }}/realms/{{ .Values.auth.keycloak.realm }}
             {{- end }}
+            {{- if .Values.auth.keycloak.account.url }}
+            - name: NEXTAUTH_ACCOUNT_URL
+              value: {{ .Values.auth.keycloak.account.url }}
+            {{- end }}
             {{- if .Values.auth.keycloak.secret.enabled }}
             - name: NEXTAUTH_CLIENT_ID
               valueFrom:
