--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -239,20 +239,20 @@ auth:
         # Vault or your cloud secret manager
         # If not using an external secret, Ontrack expects you to create the
         # secret manually.
-        # externalSecret:
+        externalSecret:
           # Enabling the creation of the external secret
-          # enabled: false
+          enabled: false
           # Refresh interval
-          # refreshInterval: 6h
+          refreshInterval: 6h
           # Location of the secret to bind to
-          # store:
+          store:
             # Name of the secret store
-            # name: vault-backend
+            name: vault-backend
             # Scope of the secret store
-            # kind: ClusterSecretStore
+            kind: ClusterSecretStore
             # Path to the secret in the store.
             # The entry is expected to have the following keys: clientId & clientSecret
-            # path: ontrack/oidc
+            path: ontrack/oidc
       # ... or provided directly in the values (ok for testing)
       # If a secret (or external secret) is provided, these values are not used
       clientId: <client id>
