--- a/charts/ontrack/templates/deployment.yaml
+++ b/charts/ontrack/templates/deployment.yaml
@@ -129,6 +129,16 @@ spec:
             ########################################
             # Authentication
             ########################################
+            - name: ONTRACK_CONFIG_SECURITY_AUTHORIZATION_PROVISIONING
+              value: {{ .Values.auth.provisioning | quote }}
+            {{- if .Values.auth.provisioning }}
+            - name: ONTRACK_CONFIG_SECURITY_AUTHORIZATION_ADMIN_EMAIL
+              value: {{ .Values.auth.admin.email | quote }}
+            - name: ONTRACK_CONFIG_SECURITY_AUTHORIZATION_ADMIN_FULLNAME
+              value: {{ .Values.auth.admin.fullName | quote }}
+            - name: ONTRACK_CONFIG_SECURITY_AUTHORIZATION_ADMIN_GROUPNAME
+              value: {{ .Values.auth.admin.groupName | quote }}
+            {{- end }}
             {{- if .Values.auth.oidc.enabled }}
             - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI
               value: {{ .Values.auth.oidc.issuer | quote }}
