--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -236,6 +236,8 @@ auth:
     name: OIDC
     # OIDC issuer URL
     issuer: ""
+    # Trailing slash for the issuer URL (used for Auth0)
+    trailingSlash: false
     # Credentials used to contact the OIDC provider
     credentials:
       # Either stored in a secret (recommended)
@@ -359,6 +361,8 @@ auth:
   secret: xxx
   # Specific setup for parsing the JWT access tokens
   # jwt:
+    # Audience
+    # audience: ""
     # If the `typ` claim is different than "JWT"
     # type: JWT
     # List of mappings for the claims
