--- a/charts/ontrack/templates/keycloak-ldap.yaml
+++ b/charts/ontrack/templates/keycloak-ldap.yaml
@@ -39,6 +39,52 @@ data:
             "id": "{{ .Values.auth.keycloak.ldap.id }}",
             "name": "{{ .Values.auth.keycloak.ldap.name }}",
             "providerId": "ldap",
+            "subComponents": {
+              "org.keycloak.storage.ldap.mappers.LDAPStorageMapper": [
+                {
+                  "name": "email",
+                  "providerId": "user-attribute-ldap-mapper",
+                  "config": {
+                    "ldap.attribute": [
+                      "mail"
+                    ],
+                    "is.mandatory.in.ldap": [
+                      "true"
+                    ],
+                    "read.only": [
+                      "true"
+                    ],
+                    "always.read.value.from.ldap": [
+                      "true"
+                    ],
+                    "user.model.attribute": [
+                      "email"
+                    ]
+                  }
+                },
+                {
+                  "name": "username",
+                  "providerId": "user-attribute-ldap-mapper",
+                  "config": {
+                    "ldap.attribute": [
+                      "uid"
+                    ],
+                    "is.mandatory.in.ldap": [
+                      "true"
+                    ],
+                    "always.read.value.from.ldap": [
+                      "true"
+                    ],
+                    "read.only": [
+                      "true"
+                    ],
+                    "user.model.attribute": [
+                      "username"
+                    ]
+                  }
+                }
+              ]
+            },
             "config": {
               "enabled": ["true"],
               "priority": ["0"],
